--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@vercel/node": "^3.1.19",
     "@supabase/supabase-js": "^2.86.2",
     "@trpc/server": "^10.45.2",
     "axios": "^1.13.2",
