--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@
 
 
 # Connect to Supabase via connection pooling
-DATABASE_URL="postgresql://postgres.wkboltwmqqwdlnmnyffo:Nurkholis26@@aws-1-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL="postgresql://postgres.wkboltwmqqwdlnmnyffo:Nurkholis26@aws-1-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
 # Direct connection to the database. Used for migrations
-DIRECT_URL="postgresql://postgres.wkboltwmqqwdlnmnyffo:Nurkholis26@@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
+DIRECT_URL="postgresql://postgres.wkboltwmqqwdlnmnyffo:Nurkholis26@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
 
 
 # Port (Railway provides PORT automatically, but you can set one)
@@ -24,7 +24,7 @@ EMAIL_FROM="PlanIT <no-reply@example.com>"
 OWNER_EMAIL=your-email@example.com
 
 # Oauth redirect / server url if needed
-OAUTH_SERVER_URL=https://plan-it-backend-sigma.vercel.app
+OAUTH_SERVER_URL=https://plan-it-frontend-gamma.vercel.app
 
 # Origins yang diizinkan untuk CORS (pisahkan dengan koma)
 # Contoh: CORS_ORIGINS="https://planit-frontend.vercel.app,http://localhost:5173"
