--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 DATABASE_URL="postgresql://postgres:nurkholis@localhost:5432/productivity_db"
 
 # Connect to Supabase via connection pooling
-DATABASE_URL="postgresql://postgres.wkboltwmqqwdlnmnyffo:Nurkholis26@aws-1-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL=postgresql://postgres:Nurkholis26@db.wkboltwmqqwdlnmnyffo.supabase.co:6543/postgres?pgbouncer=true&sslmode=require
 
 # Direct connection to the database. Used for migrations
-DIRECT_URL="postgresql://postgres.wkboltwmqqwdlnmnyffo:Nurkholis26@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
+DIRECT_URL=postgresql://postgres:Nurkholis26@db.wkboltwmqqwdlnmnyffo.supabase.co:5432/postgres?sslmode=require
 
 PORT=3000
 
