--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
-  "builds": [{ "src": "api/index.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "api/index.ts" }]
+  "functions": {
+    "api/index.ts": {
+      "runtime": "nodejs20.x",
+      "memory": 1024
+    }
+  }
 }
